--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "reminder",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://msshohruh.github.io/test/",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "gh-pages": "^4.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-icons": "^3.11.0",
@@ -15,9 +17,11 @@
     },
     "scripts": {
         "start": "react-scripts --openssl-legacy-provider start",
-        "build": "CI= react-scripts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "react-scripts build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": "react-app"
